# nc

./: .env.example  .gitignore  404.html  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  Dockerfile.slim  Dockerfile.test  Dockerfile.test-all  Dockerfile.windows  ENGINE_FIXES.md  GITHUB_RELEASE_NOTES_v1.0.0.md  INSTALL.md  KNOWN_ISSUES.md  NC_AI_TRAINING.md  NOTICE  NOVA_ARCHITECTURE.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  SECURITY_CERTIFICATE.md  TUTORIAL.md  docker-compose.yml  index.html  install.bat  install.ps1  install.sh  nc_ai_providers.json  start.bat  start.sh
bindings/python/: README.md  pyproject.toml  setup.py
bindings/python/nc_lang/: __init__.py  cli.py  runtime.py  workflow.py
engine/: CMakeLists.txt  Makefile  ai_ai.nc  auth_service.nc  build_windows.bat  orders_dashboard.html  release.ncui  user_crud.nc  users_crud.nc
engine/include/: nc.h  nc_ast.h  nc_async.h  nc_build.h  nc_chunk.h  nc_compiler.h  nc_database.h  nc_embed.h  nc_enterprise.h  nc_gc.h  nc_http.h  nc_json.h  nc_lexer.h  nc_llvm.h  nc_middleware.h  nc_parser.h  nc_pkg.h  nc_platform.h  nc_plugin.h  nc_server.h  nc_stdlib.h  nc_token.h  nc_ui_assets.h  nc_value.h  nc_version.h  nc_vm.h  nc_websocket.h
engine/orders_demo/: README.md  app.html  app.ncui  service.nc
engine/products_demo/: README.md  app.html  app.ncui  service.nc
engine/src/: main.c  nc_ai_benchmark.h  nc_ai_efficient.c  nc_ai_efficient.h  nc_ai_enterprise.c  nc_ai_enterprise.h  nc_ai_router.c  nc_ai_router.h  nc_async.c  nc_build.c  nc_compiler.c  nc_crypto.c  nc_crypto.h  nc_cuda.c  nc_cuda.h  nc_database.c  nc_debug.c  nc_distributed.c  nc_embed.c  nc_enterprise.c  nc_gc.c  nc_generate.h  nc_generate_stubs.c  nc_http.c  nc_interp.c  nc_jit.c  nc_json.c  nc_lexer.c  nc_llvm.c  nc_lsp.c  nc_metal.h  nc_metal_noop.c  nc_middleware.c  nc_migrate.c  nc_model.h  nc_module.c  nc_nova.h  nc_nova_reasoning.h  nc_nova_stubs.h  nc_optimizer.c  (+22 more)
engine/tests/: test_nc.c  test_vulnerabilities.c
engine/todo_app/: README.md  app.html  app.ncui  service.nc  test_app.nc
engine/tools/: embed_assets_tool.c
engine/training_corpus/instruction-pairs/: api-gateway_full_app.nc  auth_api_service.nc  auth_full_app.nc  blog_api_service.nc  blog_full_app.nc  booking_api_service.nc  booking_full_app.nc  chatbot_api_service.nc  chatbot_full_app.nc  dashboard_api_service.nc  dashboard_full_app.nc  ecommerce_api_service.nc  ecommerce_full_app.nc  files_api_service.nc  files_full_app.nc  inventory_api_service.nc  inventory_full_app.nc  job-queue_full_app.nc  monitoring_full_app.nc  newsletter_full_app.nc  notes_full_app.nc  notifications_full_app.nc  ops-center_api_service.nc  ops-center_full_app.nc  polls_full_app.nc  recipes_full_app.nc  support_api_service.nc  support_full_app.nc  survey_full_app.nc  todo_api_service.nc  todo_full_app.nc  url-shortener_full_app.nc
engine/training_corpus/nc-corpus/: all_documentation.txt  all_nc_code.txt  all_scripts.txt  all_websites.txt  code_review_knowledge.txt  devheallabs.txt  hiveant_code.txt  hiveant_complete.txt  nc-ai_code.txt  nc-apps_code.txt  nc-lang_code.txt  nc-scripts_code.txt  nc-ui_code.txt  nc_agent_pairs.nc  nc_agent_tools.nc  nc_ai_engine.txt  nc_ai_modules.txt  nc_ai_native.txt  nc_ai_prompts.txt  nc_ai_tests.txt  nc_apps_complete.txt  nc_engine_full.txt  nc_engine_internals.txt  nc_lang_all_nc.txt  nc_lang_configs.txt  nc_lang_docs.txt  nc_lang_js.txt  nc_lang_templates.txt  nc_scripts_complete.txt  nc_ui_complete.txt  nc_ui_full.txt  neuraledge_code.txt  neuraledge_complete.txt  nova_all_nc_code.txt  nova_c_engine.txt  nova_websites.txt  real_world_knowledge.txt  swarmops_code.txt  swarmops_complete.txt
engine/training_corpus/nc-main/nc-ai-sdk/sdk/: nc_ai_api.nc  server.nc
engine/training_corpus/nc-main/nc-ai-sdk/sdk/inference/: errorfix.nc  generate.nc  recommend.nc
engine/training_corpus/nc-main/nc-ai-sdk/sdk/ml/: embeddings.nc  pipeline.nc  swarm.nc
engine/training_corpus/nc-main/nc-lang/engine/todo_app/: service.nc  test_app.nc
engine/training_corpus/nc-main/nc-lang/examples/: 03_control_flow.nc  05_multi_provider.nc  06_email_classifier.nc  10_data_pipeline.nc
engine/training_corpus/nc-main/nc-lang/lib/: base64.nc  copy.nc  csv.nc  email.nc  enum.nc  functools.nc  hashlib.nc  platform.nc  pprint.nc  secrets.nc  socket.nc  statistics.nc  subprocess.nc  tempfile.nc  urllib.nc
engine/training_corpus/nc-main/nc-lang/templates/: content-moderator.nc
engine/training_corpus/nc-main/nc-lang/tests/: functional_test.nc  test_enterprise_features.nc  test_v1_enhancements.nc  test_vm_enterprise.nc  test_vm_safety.nc  verify_website_example.nc
engine/training_corpus/nc-project/ANTHLM_OS/: server.nc
engine/training_corpus/nc-project/ANTHLM_OS/digital_twin/: system_model.nc
engine/training_corpus/nc-project/ANTHLM_OS/scripts/: deploy-local.nc  setup.nc  start.nc
engine/training_corpus/nc-project/ANTHLM_OS/sdk/: agent_template.nc  plugin_api.nc
engine/training_corpus/nc-project/ANTHLM_OS/simulation/: simulator.nc
engine/training_corpus/nc-project/ANTHLM_OS/tests/: test_agents.nc  test_hiveant.nc
engine/training_corpus/nc-project/ant-nc/scripts/: demo.nc  docker-build.nc  open.nc  setup.nc
engine/training_corpus/nc-project/ant-nc/src/: server.nc
engine/training_corpus/nc-project/ant-nc/tests/: test-api.nc  test-functional.nc  test-issues.nc  test-memory.nc  test-runner.nc
engine/training_corpus/nc-project/ant-stocks/: ant_stocks.nc  neuraledge.nc
engine/training_corpus/nc-project/ant-stocks/services/: analyzer.nc  data_collector.nc  digital_twin.nc  gateway.nc  learning_engine.nc  scheduler.nc  signal_engine.nc  swarm_engine.nc
engine/training_corpus/nc-project/ant-stocks/tests/: test_debug.nc  test_neuraledge.nc
engine/training_corpus/release-curated/services/: enterprise_accounts_service.nc  release_assistant_service.nc
engine/training_corpus/release-curated/tests/: release_contract_tests.nc
engine/training_corpus/release-curated/ui/: release_ops_portal.ncui
(+399 files in other folders)
